--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
 			<div class="jugador1">
 				<h2 id="jugador1">Jugador 1</h2>
-				<p>0</p>	
+				<p id="jugador1_puntos">0</p>	
 			</div>	
 	    	<div id="board" class="board">
 				<!-- <div class="columna columna-0">
@@ -108,7 +108,7 @@
 				</div> -->
 	    	</div>
 			<div class="jugador2">
-				<p>0</p>
+				<p id="jugador2_puntos">0</p>
 				<h2 id="jugador2">Jugador 2</h2>
 			</div>
 	    <input type="button" name="Nueva Partida" value="Nueva Partida" id="nueva_partida" class="button">
