Se crearon 2 funciones para controlar el movimiento de las damas y dejar mas simple la funcion del click

--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 </head>
 <body>
 	<div class="contenedor-principal">
-		<header>
-			<nav>
-				<div class="logo">
-					<a href="https://www.instagram.com/teraflop.computacion/" target="_blank"><img class="logo" src="img/TERAFLOP.png" alt="logo"></a>
-				</div>
-				<div class="enlaces">
-					<a href="#" class="nav">Damas Online</a>
-					<a href="#" class="nav">Registrarse</a>
-					<a href="#" class="nav">Iniciar Sesión</a>
-				</div>
-			</nav>
-		</header>
+		<nav id="nav">
+			<a href="https://www.instagram.com/teraflop.computacion/" target="_blank"><img class="logo" src="img/TERAFLOP.png" alt="Logo"></a>
+			<div class="menu">
+				<img src="img/menu_50px.png" alt="Menu" id="btn_menu">
+			</div>
+			<div class="enlaces">
+				<a href="#" class="nav oculto">Damas Online</a>
+				<a href="#" class="nav oculto">Registrarse</a>
+				<a href="#" class="nav oculto">Iniciar Sesión</a>
+			</div>
+		</nav>
 
     	<section>
 				<div class="jugador1">
