Ahora se validan los campos antes de ser enviados

--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,7 @@
 
 		<div class="centrar">
 			<section class="formulario">
-				<form action="" id="form"> 
+				<form action="" id="formulario"> 
 					<label for="nombre">Nombre completo</label>
 					<input type="text" name="nombre" id="nombre">
 					<label for="email">Email</label>
