Ahora las damas son objetos

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 					<h2 id="jugador2">Jugador 2</h2>
 				</div>
 		    <input type="button" name="Nueva Partida" value="Nueva Partida" id="nueva_partida" class="button">
+			<input type="button" name="Guardar Partida" value="Guardar Partida" id="guardar_partida" class="button">
+			<input type="button" name="Cargar Partida" value="Cargar Partida" id="cargar_partida" class="button">
+			<input type="button" name="Borrar Partida" value="Borrar Partida" id="borrar_partida" class="button">
 		</section>
 
 		<footer id="footer">
