El formulario de contacto valida los campos y abre la herramienta de envio de emails predeterminada de nuestro sistema operativo

--- a/contacto.html
+++ b/contacto.html
@@ -32,9 +32,10 @@
 					<input type="text" name="nombre" id="nombre">
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email">
-					<label for="comentario">Comentario</label>
-					<textarea name="comentario" id="comentario"></textarea>
+					<label for="mensaje">Mensaje</label>
+					<textarea name="mensaje" id="mensaje"></textarea>
 					<input type="submit" value="Enviar">
+					<a href="mailto:delmontelucas678@gmail.com" id="fundamental">mail</a>
 				</form>
 			</section>
 		</div>
