--- a/index.html
+++ b/index.html
@@ -25,21 +25,30 @@
 			</div>
 		</nav>
 
+		<div class="mensaje_emergente">
+			<div class="mensaje">
+				<p id="mensaje"><!-- Felicitaciones Lucas! Ganaste --></p>
+			</div>
+			<div class="aceptar">
+				<input type="button" name="aceptar" value="Aceptar" id="aceptar" class="btnAceptar">
+			</div>
+		</div>
+
     	<section>
 			<div class="jugador1">
 				<h2 id="jugador1">Jugador 1</h2>
 				<p id="jugador1_puntos">0</p>	
 			</div>	
-
+			
 		    <div id="tablero" class="tablero"></div>
-
+			
 			<div class="jugador2">
 				<p id="jugador2_puntos">0</p>
 				<h2 id="jugador2">Jugador 2</h2>
 			</div>
-		    <input type="button" name="Nueva Partida" value="Nueva Partida" id="nueva_partida" class="button">
-			<input type="button" name="Guardar Partida" value="Guardar Partida" id="guardar_partida" class="button">
-			<input type="button" name="Cargar Partida" value="Cargar Partida" id="cargar_partida" class="button">
+		    <input type="button" name="Nueva Partida" value="Nueva Partida" id="nueva_partida" class="boton">
+			<input type="button" name="Guardar Partida" value="Guardar Partida" id="guardar_partida" class="boton">
+			<input type="button" name="Cargar Partida" value="Cargar Partida" id="cargar_partida" class="boton">
 		</section>
 
 		<footer id="footer">
